<resources>
    <string name="app_name">BookShelf</string>

    <!--delete上下文菜单-->
    <string name="confirmation">Confirmation</string>
    <string name="sure_to_delete">Are you sure to delete the book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--详情/编辑-->
    <string name="button_确定">confirm</string>
    <string name="button_取消">cancel</string>
    <string name="button_返回">return</string>
    <string name="book_show_title">title</string>
    <string name="book_show_author">author</string>
    <string name="book_show_translator">translator</string>
    <string name="book_show_publisher">publisher</string>
    <string name="book_show_pubTime">pubtime</string>
    <string name="book_show_isbn">isbn</string>
    <string name="book_show_notes">notes</string>
    <string name="book_show_website">website</string>
    <string name="book_show_title_1">title:</string>
    <string name="book_show_author_1">author:</string>
    <string name="book_show_translator_1">translator:</string>
    <string name="book_show_publisher_1">publisher:</string>
    <string name="book_show_pubTime_1">pubtime:</string>
    <string name="book_show_isbn_1">isbn:</string>
    <string name="book_show_notes_1">notes:</string>
    <string name="book_show_website_1">website:</string>

<!--loan-->
    <string name="sure_to_loan">Are you sure to loan the book?</string>
    <string name="loan">Loaned books</string>
    <string name="sure_to_return">Are you sure the book has been returned?</string>
    <string name="book_null">Books that have not been lent out!</string>

<!--exist-->
    <string name="exist">Existing books</string>

    <!--抽屉-->
    <string name="侧边栏标题">BookShelf</string>
    <string name="侧边栏文字">manage your books</string>
    <string name="navigation_drawer_open">开</string>
    <string name="navigation_drawer_close">关</string>

    <!--about-->
    <string name="about_preference_category_title">About</string>
    <string name="about_preference_rate_title">Rate Me</string>
    <string name="about_preference_rate_summary">Please give five stars if you find it useful</string>
    <string name="about_preference_donate_title">Donate Me</string>
    <string name="about_preference_donate_summary">Donations are greatly appreciated</string>
    <string name="about_donate_dialog_content">Your donations will be my motivation to make this app better.\nMy PayPal &amp; Alipay account is smartjinyu@gmail.com.\nThanks for your support!</string>
    <string name="about_donate_dialog_positive0">Alipay</string>
    <string name="about_donate_dialog_negative0">Copy Account</string>
    <string name="about_donate_alipay_qrcode" translatable="false">aex01588ztl2mjttjpwtzae</string>
    <string name="about_preference_donate_toast">My account has been copied to clipboard! Thanks for your donating!</string>
    <string name="about_preference_github_repository">Open Source</string>
    <string name="about_preference_feedback_title">Feedback</string>
    <string name="about_preference_feedback_summary">Contact me if any suggestions or complaints</string>
    <string name="about_preference_license">License</string>
    <string name="about_preference_license_dialog">Open Source License</string>
    <string name="about_preference_privacy_policy">Privacy Policy</string>
    <string name="about_preference_term_of_service">Term of Service</string>
    <string name="about_preference_feedback_email_address" translatable="false">1520802410@qq.com</string>
    <!--smartjinyu@gmail.com-->
    <string name="about_preference_no_email_client_toast">No email client available on your device! Please send your feedback to %1$s.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--setting-->
    <string name="settings_settings">Settings</string>
    <string name="settings_info_retrieval">Book Info Retrieval</string>
    <string name="settings_web_services_title">Web Services</string>
    <string name="settings_web_services_min_toast">You have to choose at least one service!</string>
    <string name="settings_auto_complete_website_title">Auto Complete Website Field</string>
    <string name="settings_backup_category">Backup</string>
    <string name="settings_backup_title">Backup BookShelf</string>
    <string name="settings_restore_title">Restore BookShelf</string>
    <string name="backup_succeed_toast">Backup Succeeded!</string>
    <string name="backup_fail_toast">Backup Failed! Please check logs and contact the developer!</string>
    <string name="backup_progress_dialog_title">Backing Up BookShelf</string>
    <string name="backup_progress_dialog_content">Please wait…</string>
    <string name="restore_progress_dialog_title">Restoring BookShelf</string>
    <string name="choose_folder_dialog_choose">Choose</string>
    <string name="restore_succeed_toast">Restore Succeeded, and App will restart in 2 seconds…</string>
    <string name="restore_fail_toast">Restore Failed! Please check logs and contact the developer!</string>
    <string name="restore_confirm_dialog_title">Caution</string>
    <string name="restore_confirm_dialog_content">Restore this backup will OVERWRITE all your books and settings in BookShelf currently. You CANNOT recover them after this action. Are you sure to continue to restore?</string>
    <string name="settings_export_to_csv_title">Export to .csv file</string>
    <string name="settings_export_to_csv_summary">Export BookShelf to .csv file for further management</string>
    <string name="export_progress_dialog_title">Exporting BookShelf</string>
    <string name="export_progress_dialog_content">Please wait…</string>
    <string name="export_csv_dialog_title">Choose Items to Export</string>
    <string name="export_csv_file_order">No.</string>
    <string name="export_csv_file_time">Export Time: %1$s</string>
    <string name="export_csv_file_end">Exported from BookShelf (https://play.google.com/store/apps/details?id=com.smartjinyu.mybookshelf)</string>
    <string name="export_csv_file_copyright">"Copyright of the above data is reserved by the corresponding web services, you must follow requirement of these services to use data. BookShelf is not responsible for copyright issues. "</string>
    <string name="export_csv_dialog_at_least_toast">You have to choose at least ONE item!</string>
    <string name="export_csv_export_succeed_toast">"Export Succeeded! "</string>
    <string name="export_csv_export_fail_toast">Export Failed! Please check logs and contact the developer!</string>
    <string name="export_csv_caution_dialog_title">Caution</string>
    <string name="export_csv_caution_dialog_content">This function is used for further management of your books.\nYou CANNOT import the .csv file to BookShelf.
        If you want to restore later, please use backup/restore function. </string>
    <string name="settings_general">General</string>
    <string name="settings_check_update_title">Check Updates on Startup</string>
    <string name="settings_no_document_provider_toast">No available document provider on your device!</string>
    <string-array name="settings_web_services_entries">
        <item>DouBan.com</item>
        <item>OpenLibrary.org</item>
    </string-array>
    <string-array name="export_csv_dialog_list">
        <item>Title</item>
        <item>Authors</item>
        <item>Translators</item>
        <item>Publisher</item>
        <item>PubTime</item>
        <item>Isbn</item>
        <item>Notes</item>
        <item>Website</item>
    </string-array>
</resources>