<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="0dp">

    <ImageView
        android:id="@+id/book_show_cover"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:scaleType="fitXY" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_title_1"
            android:textSize="23sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_title"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_author_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_author_1"
            android:textSize="23sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_author"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_translator_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_translator_1"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_translator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_translator"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_publisher_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_publisher_1"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_publisher"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_pubTime_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_pubTime_1"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_pubTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_pubTime"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_isbn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_isbn_1"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_isbn"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_notes_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_notes_1"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_notes"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_show_website_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_website_1"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/book_show_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_website"
            android:textSize="23sp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_return"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_返回"
        android:textSize="20sp">
    </Button>

</LinearLayout>
