<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingTop="20dp">
    <TextView
        android:id="@+id/book_edit_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/edti_book_context"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_title_1"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_title"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_title"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_author_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/book_show_author_1"
            android:textSize="19sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/book_show_author"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_translator_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_translator_1"
            android:textSize="19sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_translator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_translator"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_publisher_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_publisher_1"
            android:textSize="19sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_publisher"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_pubTime_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_pubTime_1"
            android:textSize="19sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_pubTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_pubTime"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_isbn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_isbn_1"
            android:textSize="19sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_isbn"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_notes_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_notes_1"
            android:textSize="19sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_notes"
            android:textSize="19sp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/book_edit_website_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_website_1"
            android:textSize="19sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/book_edit_website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_show_website"
            android:textSize="19sp"
            android:layout_marginBottom="35dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_确定"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_确定"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="100dp">
        </Button>
        <Button
            android:id="@+id/button_取消"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_取消"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="50dp">
        </Button>
    </LinearLayout>
</LinearLayout>