<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/blue1"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints">
            <!--            <Spinner-->
            <!--                android:id="@+id/toolbar_spinner"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content" />-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/blue1"
                android:orientation="horizontal">
                <com.google.android.material.navigation.NavigationView
                    android:id="@+id/activity_main_navigationView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue1"
                    android:paddingLeft="0dp"
                    app:menu="@menu/drawer_menu"
                    android:layout_gravity="center_vertical">
                </com.google.android.material.navigation.NavigationView>
                <android.widget.SearchView
                    android:id="@+id/searchview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:queryHint="请输入搜索内容"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycle_view_books"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/blue2"
            android:paddingLeft="300dp"
            android:paddingRight="50dp">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/left_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@color/white"
        android:orientation="vertical"
        app:menu="@menu/drawer_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/header"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/book_show"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:padding="2dp"
                android:scaleType="fitXY" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/侧边栏标题"
                android:textColor="@android:color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/侧边栏文字"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingLeft="300dp"
                android:paddingRight="50dp"
                android:src="@drawable/ic_settings"
                android:text="about"
                app:backgroundTint="@color/blue">
            </com.google.android.material.floatingactionbutton.FloatingActionButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_settings"
                android:layout_marginTop="67dp"
                android:paddingLeft="50dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
